--- a/WpfDBViewer/WpfDBViewer.csproj
+++ b/WpfDBViewer/WpfDBViewer.csproj
@@ -82,6 +82,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="InsertRowTable.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -98,6 +102,9 @@
       <DependentUpon>DbCreateWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="DbInfoClass.cs" />
+    <Compile Include="InsertRowTable.xaml.cs">
+      <DependentUpon>InsertRowTable.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
